--- a/_config.yml
+++ b/_config.yml
@@ -7,34 +7,33 @@ safe: false
 
 ### site serving configuration ###
 exclude: [CNAME, README.md, .gitignore]
-permalink: / ## disables post output
+permalink: /:title ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 
 
 ### content configuration ###
-title:       "SinglePaged - Simple Jekyll template"
-keywords:    "SinglePaged, jekyll, template, github, blog, single page"
-description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
+title:       "Money Making Apps - Earn Extra Money using your Android Phone"
+keywords:    ""
+description: "Want to earn extra money? Here are a few apps that make it easy to earn some extra money using your Android phone."
 source_link: "https://github.com/t413/SinglePaged"
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
-google_analytics_key:  ## put YOUR key here to enable tracking! (blank to disable)
-baseurl: "/AppsThatGiveYouMoney" # the subpath of your site, e.g. /blog
-##url: "localhost:4000"
+google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
 
 
 ### template colors, used site-wide via css ###
 colors:
   black:     '#111111'
   white:     '#f8f8f8'
-  blue:      '#49a7e9'
-  green:     '#9bcf2f'
-  purple:    '#c869bf'
-  orange:    '#fab125'
-  turquoise: '#0fbfcf'
+  teal:      '#33a39c'
+  light-blue:     '#9bcf2f'
+  blue:    '#336cad'
+  royal-blue:    '3348b3'
+  purple: '#4533b8'
+  smore: 'url(http://smoreapp.co/wp-content/uploads/2016/04/camping-modal.jpg)'
 
 kramdown:
   auto_ids:  false
