--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ highlighter: rouge
 
 
 ### content configuration ###
-title:       "Money Making Apps - Earn Extra Money using your Android Phone"
-keywords:    ""
-description: "Want to earn extra money? Here are a few apps that make it easy to earn some extra money using your Android phone."
+title:       "Apps That Give You Money - Earn Extra Money using your Android Phone"
+keywords:    "apps that give you money"
+description: "Are you looking to earn a little extra cash using your android phone? Here are a few apps that give you money!"
 source_link: "https://github.com/t413/SinglePaged"
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
